--- a/pages/admin.html
+++ b/pages/admin.html
@@ -106,6 +106,51 @@
 			</thead>
 			<tbody id="tablaProducto"></tbody>
 		</table>
+
+		<!-- Modal Editar -->
+		<div class="modal" tabindex="-1" id="productoEditar">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title">Editar Producto</h5>
+						<button
+							type="button"
+							class="btn-close"
+							data-bs-dismiss="modal"
+							aria-label="Close"
+						></button>
+					</div>
+					<div class="modal-body">
+						<form class="p-3" id="validarProductoEditar">
+							<div class="mb-3">
+								<label class="form-label">Nombre</label>
+								<input type="text" class="form-control" id="nombreEditar" />
+							</div>
+							<div class="mb-3">
+								<label class="form-label">Precio</label>
+								<input type="number" class="form-control" id="precioEditar" />
+							</div>
+							<div class="mb-3">
+								<label class="form-label">Descripcion</label>
+								<input type="text" class="form-control" id="descripcionEditar" />
+							</div>
+							<div class="modal-footer">
+								<button
+									type="button"
+									class="btn btn-secondary"
+									data-bs-dismiss="modal"
+								>
+									Cerrar
+								</button>
+								<button type="sumbit" class="btn btn-primary">
+									Guardar cambios
+								</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 		<script src="/js/admin.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	</body>
