--- a/pages/admin.html
+++ b/pages/admin.html
@@ -142,9 +142,7 @@
 								>
 									Cerrar
 								</button>
-								<button type="sumbit" class="btn btn-primary">
-									Guardar cambios
-								</button>
+								<button type="sumbit" class="btn btn-primary">Guardar cambio</button>
 							</div>
 						</form>
 					</div>
